using Giphy API with Flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,8 @@
     </head>
     <body>
         <h1>Welcome to GifBot!</h1>
-        <p>What kind of gif would you like to see?</p>
-        <form method="post" action="/yourgif">
-            <input type="text" name="gifchoice" placeholder="What kind of gif do you want to see?"/>
-            <input type="submit" value="Submit"/>
+        <form method="post" action="/gif">
+            <input type="submit" value="Load top 25 trending gifs"/>
         </form>
     </body>
 </html>
